feat: implement org and audit services for phase-1